Join it at: https://launchpad.net/~tomdroid-dev

For more details and developer visible changes see the ChangeLog

-------------------------------------------------------------------------------
Tomdroid <version-code> - <version-name> released on <release-date>

* fixed bug lp:1068681 Tomdroid should just show up in the "open file with" Android dialouge when the extension is *.note 

-------------------------------------------------------------------------------
Tomdroid 0.7.2 beta - "For the Love of Monkey" released on 2012-10-17

* added GMail-style two-color pane and selector
* added ability to receive text-shares from other notes (lp:1039104)
* added ability to send and receive note files
* added auto-backup to SD Card preference
* made First Note translatable
* moved search function to main activity (allowing two-pane landscape view in results)
* added option to show deleted notes in list
* added ability to import plain text
* added file picker to import plain text and note files from within Tomdroid
* added options to turn off hyperlink creation
* fixed bug lp:1039703 Tomdroid crashes when rotating the device during synchronisation
* fixed bug lp:1039824 Crash when rotate on Revert All
* fixed bug lp:1039814 Crash on Backup Notes
* fixed bug lp:1039671 Crash when the server URL that includes "illegal characters"
* fixed bug lp:1040333 Crash on Revert
* fixed bug lp:1040338 Crash on Cancel
* fixed bug lp:1040389 Share/Send from chrome or play crash
* fixed bug lp:1040551 Tomdroid two-way sync to SD card messes up titles
* fixed bug lp:1041792 Error is occured on text decoration in beta Edit
* fixed bug lp:1049026 Error, when note starts with illegal xml character
* fixed bug lp:1053366 Search Results: No "not found" text in empty notes-list

-------------------------------------------------------------------------------
Tomdroid 0.7.1 beta - "Fast paced" released on 2012-08-21

* Actionbar for all versions of Android
* Converted format bar to sliding drawer